--- a/src/main/resources/templates/stocks.html
+++ b/src/main/resources/templates/stocks.html
@@ -30,7 +30,7 @@
 </table>
 <div>
     <br>
-    <a href="/customer">Список товаров</a>
+    <a href="/customer">Список пользователей</a>
     <a href="/">Главная страница</a>
 </div>
 </body>
